fix letterspacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -204,7 +204,6 @@ h1, h2, h3, h4 {
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
-  letter-spacing: 80px;
 
   position: inherit;
 
